src/components/nav.css
header > div:first-of-type {
    display: flex;
    justify-content: space-between;
}

nav {
    float: right;
    height: 100px;
    position: relative;
    width: 50%;
    flex: 1 0 0;
}

nav ul {
    margin: 0;
    padding: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

nav ul li
{
    list-style-type: none;
    display: inline;
    margin-bottom: 0;
}

nav li:not(:first-child):before {
    content: " | ";
    color: white;
}

nav li a:hover {
    color: green;
}

nav li a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    font-weight: bold;
}

.logo {
    flex: 1 0 0;
}

@media only screen and (max-width: 960px) {
    nav {
        width: 90%;
        display: flex!important;
        justify-content: center;
    }
    header {
        height: 200px;
    }
    header > div:first-of-type  {
        flex-flow:column wrap;
    }
    .logo {
        margin-bottom: 35px;
    }
}

